--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ lib/
 
 # Ignore openssl config for generating self-signed SSL certificate for debug
 openssl.conf
+ssl.conf
 
 # Ignore webpack build
 dist/
