--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "An Azure DevOps Work Item Control for loading values from a Rest endpoint",
   "main": "index.js",
   "scripts": {
-    "build-dev": "webpack --mode=development",
+    "build-dev": "webpack -p --mode=development",
     "package-dev": "tfx extension create --manifest-globs azure-devops-extension.json --overrides-file azure-devops-extension-dev.json",
     "serve-dev": "webpack-dev-server --cert localhost.crt --key localhost.key",
     "watch": "webpack --watch",
-    "build": "webpack --mode=production",
+    "build": "webpack -p --mode=production",
     "postbuild": "npm run package",
     "package": "tfx extension create --manifest-globs azure-devops-extension.json",
     "gallery-publish": "tfx extension publish --rev-version",
@@ -52,7 +52,7 @@
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.2",
     "typescript-styled-plugin": "^0.14.0",
-    "webpack": "^4.46.0",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.11.0"
   }
