--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-data-mapping-picklist",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "An Azure DevOps Work Item Control for loading values from a Rest endpoint",
   "main": "index.js",
   "scripts": {
@@ -44,7 +44,6 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
-    "lodash-webpack-plugin": "^0.11.5",
     "prettier": "^2.2.1",
     "source-map-loader": "^1.1.3",
     "style-loader": "^2.0.0",
@@ -52,7 +51,8 @@
     "ts-loader": "^6.0.2",
     "typescript": "^3.5.2",
     "typescript-styled-plugin": "^0.18.0",
-    "webpack": "^4.46.0",
+    "underscore": "^1.12.1",
+    "webpack": "^5.49.0",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.11.2"
   }
