--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -34,6 +34,7 @@ jobs:
         languages: ${{ matrix.language }}
 
     - run: |
+       npm ci
        npm run build
 
     - name: Perform CodeQL Analysis
