--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "webpack --mode=production",
     "postbuild": "npm run package",
     "package": "tfx extension create --manifest-globs azure-devops-extension.json",
-    "gallery-publish": "tfx extension publish --rev-version",
+    "gallery-publish": "tfx extension publish --manifest-globs azure-devops-extension.json --rev-version",
+    "gallery-publish-dev": "tfx extension publish --manifest-globs azure-devops-extension.json --overrides-file azure-devops-extension-dev.json --rev-version",
     "clean": "rimraf ./dist && rimraf ./*.vsix",
     "lint": "eslint ."
   },
@@ -51,15 +52,15 @@
     "html-webpack-plugin": "^5.5.0",
     "jszip": "^3.7.1",
     "prettier": "^2.4.1",
-    "source-map-loader": "^1.1.3",
+    "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.1",
-    "tfx-cli": "^0.9.3",
+    "tfx-cli": "^0.12.0",
     "ts-loader": "^9.2.6",
     "typescript": "^3.5.2",
     "typescript-styled-plugin": "^0.18.0",
     "underscore": "^1.13.1",
     "validator": "^13.7.0",
-    "webpack": "^5.69.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
   }
